--- a/exercise5.html
+++ b/exercise5.html
@@ -43,5 +43,8 @@
       <div class="box11"></div>
       <div class="box12"></div>
     </main>
+    <footer>
+      <p class="footer-text">@All right reserved by Infratop.Inc.</p>
+    </footer>
   </body>
 </html>
