--- a/excercise8.html
+++ b/excercise8.html
@@ -7,26 +7,26 @@
   </head>
   <body>
     <main>
-    <ul>
-      <li class="list-item">リスト1</li>
-      <li class="list-item">リスト2</li>
-      <li class="list-item">リスト3</li>
-      <li class="list-item">リスト4</li>
-      <li class="list-item">リスト5</li>
-      <li class="list-item">リスト6</li>
-      <li class="list-item">リスト7</li>
-    </ul>
-    <div class="box-list">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-    </div>
+      <ul class="item">
+        <li class="list-item">リスト1</li>
+        <li class="list-item">リスト2</li>
+        <li class="list-item">リスト3</li>
+        <li class="list-item">リスト4</li>
+        <li class="list-item">リスト5</li>
+        <li class="list-item">リスト6</li>
+        <li class="list-item">リスト7</li>
+      </ul>
+      <div class="box-list">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
     </main>
   </body>
 </html>
