--- a/exercise_flex.html
+++ b/exercise_flex.html
@@ -6,15 +6,31 @@
     <title>flex</title>
   </head>
   <body>
-    <header>
-      <div class="header-item"></div>
-      <div class="header-item"></div>
-      <div class="header-item"></div>
-      <div class="header-item"></div>
-      <div class="header-item"></div>
-    </header>
-    <main>
-      
-    </main>
+    <div class="header">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="main">
+      <div class="side"></div>
+      <div class="list">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
+    <div class="footer">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </body>
 </html>
